=Removed some chaff for testing.

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "wpackagist-plugin/wp-smtp-config":"1.0",
         "wpackagist-plugin/amazon-s3-and-cloudfront": "~0.9.11",
         "wpackagist-plugin/amazon-web-services": "~0.3.4",
-        "ext-newrelic":"*",
+        //"ext-newrelic":"*",
         "ext-mbstring":"*",
         "ext-gd":"*"
     },
