--- a/app.json
+++ b/app.json
@@ -19,28 +19,28 @@
     },
     "CDN_CNAME_0": {
       "description": "The Amazon cloudfront CNAME",
-      "required": "true",
-      "value": "TBC"
+      "required": "false",
+      "value": ""
     },
     "NEW_RELIC_APP_NAME": {
       "description": "The newrelic app name",
-      "required": "true",
-      "value": "TBC"
+      "required": "false",
+      "value": ""
     },
     "NEW_RELIC_API_KEY": {
       "description": "The newrelic api key",
-      "required": "true",
-      "value": "TBC"
+      "required": "false",
+      "value": ""
     },
     "NEW_RELIC_ID": {
       "description": "The newrelic ID",
-      "required": "true",
-      "value": "TBC"
+      "required": "false",
+      "value": ""
     },
     "GOOGLE_PAGESPEED_API_KEY": {
       "description": "The google pagespeed API key",
-      "required": "true",
-      "value": "TBC"
+      "required": "false",
+      "value": ""
     },
     "AUTH_KEY": {
       "description": "One of the wordpress secrets",
